2004-10-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/*.n: Backport of minor documentation fixes.

2004-10-27  Don Porter	<dgp@users.sourceforge.net>

        * library/xmfbox.tcl (MotifFDialog_BuildUI): Fix [Bug 987169] in
        the Motif file dialogs as well.  Backport of DKF bug fix.

2004-10-26  David Gravereaux <davygrvy@pobox.com>

	* generic/tkInt.h:	Backport of shutdown safety mods from the HEAD
	* generic/tkMenu.c:	dating from 2003-12-21
	* generic/tkUtil.c:
	* generic/tkWindow.c:
	* mac/tkMacButton.c:
	* unix/tkUnixEvent.c:
	* win/tkWin32Dll.c:
	* win/tkWinEmbed.c:
	* win/tkWinMenu.c:
	* win/tkWinX.c:

	* generic/tkInt.decls:       Signature for tkWinXCleanup needed to be
	* generic/tkIntPlatDecls.h:  changed so it matches the Tcl_ExitProc
				     typedef to avoid a bad-style cast.
	

	* win/makefile.vc:  Backport to the most recent
	* win/rules.vc:     changes on the HEAD.
	* win/nmakehlp.c:

2004-10-26  Don Porter	<dgp@users.sourceforge.net>

        * tests/safe.test (safe-1.3):  Made test less sensitve to the
        full set of existing aliases in an interp, so the it only tests
        whether the tested ones are present.

        * unix/Makefile.in:     Copied LD_LIBRARY_PATH machinery from
        `make shell` target to other similar targets so that just built
        libraries are tested, rather than previous installations.

2004-10-26  Reinhard Max  <max@suse.de>

	* generic/tkEvent.c (Tk_HandleEvent): Call XSetICFocus whenever
	the window receives focus. This fixes bug #905830 but avoids
	#1000051.
	
2004-10-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinWm.c (UpdateWrapper): pass SWP_NOOWNERZORDER to
	SetWindowPos when maintaining win Z order, to prevent parent
	from flashing (adjusting Z order).

2004-10-05  Jeff Hobbs  <jeffh@ActiveState.com>

	Backport of 8.5 wm iconphoto that added support for Tk photo
	* generic/tkInt.h (TkDisplay):    images as titlebar icons. TIP #159