@@ -1,3 +1,8 @@
+2004-10-28  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* unix/tkUnixScale.c (DisplayHorizontalValue): Backport fix for
+	#220927 by Michael Schlenker to keep the labels within the window.
+
 2004-10-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/*.n: Backport of minor documentation fixes.
